# third_party_libvpx

./: .gitignore  BUILD.gn  OAT.xml  README.OpenSource  README_en.md  README_zh.md  build.sh  bundle.json  vp8_rtcd.h  vp9_rtcd.h  vpx_config.h  vpx_decoder_api.c  vpx_decoder_api.h  vpx_dsp_rtcd.h  vpx_scale_rtcd.h  vpx_version.h
armv7_config/: vp8_rtcd.h  vp9_rtcd.h  vpx_dsp_rtcd.h
armv8_config/: vp9_rtcd.h  vpx_dsp_rtcd.h
patches/: patches.json
