# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import ("//build/ohos.gni")
declare_args() {
  src_path = "./"
  enable_debug_vpx = false
  enable_share = 1
  enable_static = 0
  enable_vp8 = 1
  enable_vp9 = 1
  enable_multithread = 1
  enable_postproc = 0
  enable_runtime_cpu_detect = 0
  enable_neon = true
  enable_avx512 = 0
  enable_hbd = true
}

ohos_shared_library("vpxdec_ohos") {
  defines = [
    "HAVE_CONFIG_H",
    "VPX_SHARED_LIB=$enable_share",
    "CONFIG_VP8=$enable_vp8",
    "CONFIG_VP9=$enable_vp9",
    "CONFIG_MULTITHREAD=$enable_multithread",
    "CONFIG_POSTPROC=$enable_postproc",
    "CONFIG_RUNTIME_CPU_DETECT=$enable_runtime_cpu_detect",
    "__OHOS__",
    "CONFIG_OS = OHOS",
    "CONFIG_ARCH = ARM64",
  ]
  
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  
  cflags = [
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-all",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-Wformat=2",
    "-Wdate-time",
    "-ffp-contract=off",
    
    "-Wextra",
    "-Wpointer-arith",
    "-std=gnu99",
    
    "-march=armv8-a",
    "-mfloat-abi=hard",
  ]
  
  if (enable_neon) {
    cflags += [
      "-mfpu=neon",
    ]
  }
  
  ldflags =[
    "-Wl,-Bsymbolic",
    "-shared",
    "-Wl,-z,defs",
    "-lpthread",
  ]
  
  if (enable_debug_vpx) {
    cflags += ["-g","--ggdb"]
    ldflags += ["-g"]
  }
  
  sources = [
    "vpxdec.c",
    "args.c",
    "ivfdec.c",
    "ivfenc.c",
    "md5_utils.c",
    "rate_hist.c",
    "tools_common.c",
    "video_reader.c",
    "video_writer.c",
    "y4menc.c",
    "y4minput.c",
      
    "./vpx/src/vpx_codec.c",
    "./vpx/src/vpx_decoder.c",
    "./vpx/src/vpx_image.c",
    
    "./vpx_dsp/bitreader.c",
    "./vpx_dsp/bitreader_buffer.c",   
    "./vpx_dsp/intrapred.c",
    "./vpx_dsp/inv_txfm.c",    
    "./vpx_dsp/loopfilter.c",
    "./vpx_dsp/prob.c",
    "./vpx_dsp/skin_detection.c",
    "./vpx_dsp/vpx_convolve.c",
    "./vpx_dsp/vpx_dsp_rtcd.c",
    
    "./vpx_mem/vpx_mem.c",
    "./vpx_ports/aarch64_cpudetect.c",            
    "./vpx_scale/generic/gen_scalers.c",
    "./vpx_scale/generic/vpx_scale.c",
    "./vpx_scale/generic/yv12config.c",
    "./vpx_scale/generic/yv12extend.c",
    "./vpx_scale/vpx_scale_rtcd.c",
    "./vpx_util/vpx_thread.c",
    "./vpx_util/vpx_write_yuv_frame.c",
    
    "./vp8/vp8_dx_iface.c",
    "./vp8/common/alloccommon.c",
    "./vp8/common/blockd.c",
    "./vp8/common/dequantize.c",
    "./vp8/common/entropy.c",
    "./vp8/common/entropymode.c",
    "./vp8/common/entropymv.c",
    "./vp8/common/extend.c",
    "./vp8/common/filter.c",
    "./vp8/common/findnearmv.c",
    "./vp8/common/generic/systemdependent.c",
    "./vp8/common/idct_blk.c",
    "./vp8/common/idctllm.c",
    "./vp8/common/loopfilter_filters.c",
    "./vp8/common/mbpitch.c",
    "./vp8/common/modecont.c",
    "./vp8/common/quant_common.c",
    "./vp8/common/reconinter.c",
    "./vp8/common/reconintra.c",
    "./vp8/common/reconintra4x4.c",
    "./vp8/common/rtcd.c",
    "./vp8/common/setupintrarecon.c",
    "./vp8/common/swapyv12buffer.c",
    "./vp8/common/treecoder.c",
    "./vp8/common/vp8_loopfilter.c",
    "./vp8/decoder/dboolhuff.c",
    "./vp8/decoder/decodeframe.c",
    "./vp8/decoder/decodemv.c",
    "./vp8/decoder/detokenize.c",
    "./vp8/decoder/onyxd_if.c",
    "./vp8/decoder/threading.c",
    
    "./vp9/vp9_dx_iface.c",
    "./vp9/vp9_iface_common.c",
    "./vp9/common/vp9_alloccommon.c",
    "./vp9/common/vp9_blockd.c",
    "./vp9/common/vp9_common_data.c",
    "./vp9/common/vp9_entropy.c",
    "./vp9/common/vp9_entropymode.c",
    "./vp9/common/vp9_entropymv.c",
    "./vp9/common/vp9_filter.c",
    "./vp9/common/vp9_frame_buffers.c",
    "./vp9/common/vp9_idct.c",
    "./vp9/common/vp9_loopfilter.c",
    "./vp9/common/vp9_mvref_common.c",
    "./vp9/common/vp9_pred_common.c",
    "./vp9/common/vp9_quant_common.c",
    "./vp9/common/vp9_reconinter.c",
    "./vp9/common/vp9_reconintra.c",
    "./vp9/common/vp9_rtcd.c",
    "./vp9/common/vp9_scale.c",
    "./vp9/common/vp9_scan.c",
    "./vp9/common/vp9_seg_common.c",
    "./vp9/common/vp9_thread_common.c",
    "./vp9/common/vp9_tile_common.c",
    "./vp9/decoder/vp9_decodeframe.c",
    "./vp9/decoder/vp9_decodemv.c",
    "./vp9/decoder/vp9_decoder.c",
    "./vp9/decoder/vp9_detokenize.c",
    "./vp9/decoder/vp9_dsubexp.c",
    "./vp9/decoder/vp9_job_queue.c",
  ]
  
  include_dirs = [
    "./",
    "./vpx",
    "./vpx/internel",
    "./vpx_dsp",
    "./vpx_mem",
    "./vpx_mem/include",
    "./vpx_ports",
    "./vpx_scale",
    "./vpx_util",
    
    "./vp8",
    "./vp8/common",
    "./vp8/decoder",
    "./vp9",
    "./vp9/common",
    "./vp9/decoder"
  ]
  
  if (enable_neon) {
    sources += [
      "./vpx_dsp/arm/idct16x16_1_add_neon.c",
      "./vpx_dsp/arm/idct16x16_add_neon.c",
      "./vpx_dsp/arm/idct32x32_135_add_neon.c",
      "./vpx_dsp/arm/idct32x32_1_add_neon.c",
      "./vpx_dsp/arm/idct32x32_34_add_neon.c",
      "./vpx_dsp/arm/idct32x32_add_neon.c",
      "./vpx_dsp/arm/idct4x4_1_add_neon.c",
      "./vpx_dsp/arm/idct4x4_add_neon.c",
      "./vpx_dsp/arm/idct8x8_1_add_neon.c",
      "./vpx_dsp/arm/idct8x8_add_neon.c",
      "./vpx_dsp/arm/intrapred_neon.c",
      "./vpx_dsp/arm/loopfilter_neon.c",
      "./vpx_dsp/arm/vpx_convolve8_neon.c",
      "./vpx_dsp/arm/vpx_convolve_avg_neon.c",
      "./vpx_dsp/arm/vpx_convolve_copy_neon.c",
      "./vpx_dsp/arm/vpx_convolve_neon.c",
      "./vpx_dsp/arm/vpx_scaled_convolve8_neon.c",
      "./vp8/common/arm/loopfilter_arm.c",
      "./vp8/common/arm/neon/bilinearpredict_neon.c",
      "./vp8/common/arm/neon/copymem_neon.c",
      "./vp8/common/arm/neon/dc_only_idct_add_neon.c",
      "./vp8/common/arm/neon/dequant_idct_neon.c",
      "./vp8/common/arm/neon/dequantizeb_neon.c",
      "./vp8/common/arm/neon/idct_blk_neon.c",
      "./vp8/common/arm/neon/iwalsh_neon.c",
      "./vp8/common/arm/neon/loopfiltersimplehorizontaledge_neon.c",
      "./vp8/common/arm/neon/loopfiltersimpleverticaledge_neon.c",
      "./vp8/common/arm/neon/mbloopfilter_neon.c",
      "./vp8/common/arm/neon/shortidct4x4llm_neon.c",
      "./vp8/common/arm/neon/sixtappredict_neon.c",
      "./vp8/common/arm/neon/vp8_loopfilter_neon.c",
      "./vp9/common/arm/neon/vp9_iht16x16_add_neon.c",
      "./vp9/common/arm/neon/vp9_iht4x4_add_neon.c",
      "./vp9/common/arm/neon/vp9_iht8x8_add_neon.c",
    ]
  
  
    if (enable_hbd) {
      sources += [
        "./vpx_dsp/arm/highbd_idct16x16_add_neon.c",
        "./vpx_dsp/arm/highbd_idct32x32_1024_add_neon.c",
        "./vpx_dsp/arm/highbd_idct32x32_135_add_neon.c",
        "./vpx_dsp/arm/highbd_idct32x32_34_add_neon.c",
        "./vpx_dsp/arm/highbd_idct32x32_add_neon.c",
        "./vpx_dsp/arm/highbd_idct4x4_add_neon.c",
        "./vpx_dsp/arm/highbd_idct8x8_add_neon.c",
        "./vpx_dsp/arm/highbd_intrapred_neon.c",
        "./vpx_dsp/arm/highbd_loopfilter_neon.c", 
        "./vpx_dsp/arm/highbd_vpx_convolve8_neon.c",
        "./vpx_dsp/arm/highbd_vpx_convolve_avg_neon.c",
        "./vpx_dsp/arm/highbd_vpx_convolve_copy_neon.c",
        "./vp9/common/arm/neon/vp9_highbd_iht16x16_add_neon.c",
        "./vp9/common/arm/neon/vp9_highbd_iht4x4_add_neon.c",
        "./vp9/common/arm/neon/vp9_highbd_iht8x8_add_neon.c",
      ]
    }
    
    include_dirs += [
      "./vpx_dsp/arm",
      "./vp8/common/arm",
      "./vp9/common/arm/neon"
    ]
  }
  
  external_deps = []
  
  subsystem_name = "thirdparty"
  part_name = "libvpx"
}
